--- a/package.json
+++ b/package.json
@@ -1,12 +1,16 @@
 {
   "name": "qpread",
-  "version": "1.2.0",
+  "version": "1.2.2",
   "type": "module",
   "exports": {
     ".": {
       "import": "./dist/qpread.js",
       "require": "./dist/qpread.cjs"
     }
+  },
+  "types": "./dist/index.d.ts",
+  "repository": {
+    "url": "https://github.com/Alisher-Usmonov/qpread"
   },
   "scripts": {
     "dev": "vite",
@@ -18,6 +22,7 @@
     "vite": "^4.0.0"
   },
   "dependencies": {
-    "@types/node": "^18.11.18"
+    "@types/node": "^18.11.18",
+    "vite-plugin-dts": "^1.7.2"
   }
 }
